Point scales and rules working
