# swagger/spring-server/src/main/java/ch/heigvd/amt/wp2/model/entities/RulePointScaleEntity.java
@@ -1,40 +1,0 @@
-package ch.heigvd.amt.wp2.model.entities;
-
-import javax.persistence.*;
-
-@Entity
-@Table(name = "rule_point_scale")
-public class RulePointScaleEntity extends AbstractDomainModelEntity<Long> {
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "rule_id", nullable = true)
-    private RuleEntity rule;
-
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "point_scale_id", nullable = true)
-    private PointScaleEntity pointScale;
-
-    public RulePointScaleEntity() {
-        //Here for JPA
-    }
-
-    public RulePointScaleEntity(RuleEntity rule, PointScaleEntity pointScale) {
-        this.rule = rule;
-        this.pointScale = pointScale;
-    }
-
-    public RuleEntity getRule() {
-        return rule;
-    }
-
-    public void setRule(RuleEntity rule) {
-        this.rule = rule;
-    }
-
-    public PointScaleEntity getPointScale() {
-        return pointScale;
-    }
-
-    public void setPointScale(PointScaleEntity pointScale) {
-        this.pointScale = pointScale;
-    }
-}
